--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
     <version>2.5.5</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
-  <groupId>unirio.pm</groupId>
-  <artifactId>projeto-base-spring-boot</artifactId>
-  <version>1.0</version>
-  <name>projeto-base-spring-boot</name>
-  <description>Template de projeto com Spring Boot, integrado com SonarCloud e AWS EC2</description>
-
+    <groupId>bicicletario</groupId>
+    <artifactId>aluguel-service</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>aluguel-service</name>
+    <description>Microsserviço de Aluguel para o projeto de bicicletário</description>
   <properties>
     <sonar.organization>pedroclain</sonar.organization>
     <sonar.projectKey>pedroclain_projeto-base-programacao-modular-unirio-echo-com-spring-boot</sonar.projectKey>
