ci: Ajusta o caminho de exclusão do Sonar para DTOs e Models

--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,7 @@
 
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
-        <sonar.cpd.exclusions>
-            **/dto/*.java,
-            **/model/*.java
-        </sonar.cpd.exclusions>
+        <sonar.cpd.exclusions>src/main/java/bicicletario/aluguel/dto/*.java,src/main/java/bicicletario/aluguel/model/*.java</sonar.cpd.exclusions>
     </properties>
 
     <dependencies>
