--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Necessário para o Sonar
-      
-      - name: Set up JDK 1.8
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '8' # Define Java 1.8 (do seu pom.xml)
+          java-version: '17' # Usa Java 17 para RODAR o build
           distribution: 'temurin'
-          
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
@@ -39,7 +38,7 @@ jobs:
       - name: Build, Teste e Análise Sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Token do GitHub
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # Token do Sonar (Vamos adicionar)
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # Token do Sonar 
         run: >
           mvn -B clean verify sonar:sonar 
           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
