tentativa de tratamento de erros na conexão com serviço externo equipamento (olhar log do serviço em execução)

--- a/Aluguel-Service/src/main/resources/application.properties
+++ b/Aluguel-Service/src/main/resources/application.properties
@@ -15,4 +15,4 @@ url.externo=http://localhost:8081
 
 # --- Conexao com Equipamento ---
 # Apontando para uma porta inexistente para FORCAR o uso do seu Mock Hibrido
-url.equipamento=http://localhost:9999
+url.equipamento=https://es2-microsservico-equipamento.onrender.com
