--- a/Externo-Service/src/main/resources/application.properties
+++ b/Externo-Service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.port=8081
+# MUDANÇA CRÍTICA AQUI:
+server.port=${PORT:8081}
+
 spring.application.name=externo-service
 
 spring.datasource.url=jdbc:h2:mem:externodb
